--- a/Views/Lista_Compras/ListaCompras.cshtml
+++ b/Views/Lista_Compras/ListaCompras.cshtml
@@ -87,20 +87,30 @@
                             </thead>
                             <tbody>
                             <th scope="row" class="border-0">
-                                @for (int i = 0; i <4; i++)
+
+                             
+
+                                  @{ int Longitud = Model.Count;
+                                  }
+                                
+
+
+
+                                @for (int i = 0; i < @Longitud / 8; i++)
                                 {
-                                        <div class="list-group">
-                                            <button type="button" class="list-group-item list-group-item-action active" disabled style="background-color:#ff9060	">
-                                                @for (int j = i+(i*7); j <= i + (i * 7); j++)
+
+                                    <div class="list-group">
+                                        <button type="button" class="list-group-item list-group-item-action active" disabled style="background-color:#ff9060	">
+                                            @for (int j = i + (i * 7); j <= i + (i * 7); j++)
+                                            {
+                                                @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j ))
                                                 {
-                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j))
-                                                    {
-                                                        @Libroslista
-                                                    }
+                                                    @Libroslista
                                                 }
+                                            }
 
 
-                                            </button>
+                                        </button>
                                         <a href="CadaLibro_Pedido.html" class="list-group-item list-group-item-action">
                                             <li class="list-group-item">
                                                 <!-- Contenido-->
@@ -112,8 +122,6 @@
                                                     <div class="ml-3 d-inline-block align-top">
                                                         <div class="media-body order-2 order-lg-1">
                                                             <h5 class="mt-0 font-weight-bold mb-2">
-
-                                                              
                                                             </h5>
                                                             <p class="font-italic text-muted mb-0 small">
 
@@ -134,14 +142,14 @@
                                                                 Precio Total:
                                                                 @for (int j = i + (i * 7); j <= i + (i * 7); j++)
                                                                 {
-                                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j+5))
+                                                                    @foreach (var Libroslista in ((IEnumerable<string>)Model).ElementAt(j + 5))
                                                                     {
                                                                         @Libroslista
                                                                     }
                                                                 }
                                                             </h6>
                                                             <br>
-                                                         
+
                                                         </div>
                                                     </div>
                                                 </div> <!-- fin del pedido -->
@@ -150,6 +158,7 @@
                                     </div>
                                     <br>
                                 }
+                                A
                                 <!-- Agregar los demas pedidos -->
                                 <div class="list-group">
                                     <button type="button" class="list-group-item list-group-item-action active" disabled style="background-color:#ff9060	">
